--- a/package.json
+++ b/package.json
@@ -1,49 +1,48 @@
 {
-	"name": "lite",
-	"version": "1.0.0",
-	"description": "",
-	"type": "module",
-	"files": [
-		"exports"
-	],
-	"exports": {
-		"./element": {
-			"import": "./exports/element.js",
-			"types": "./exports/element.d.ts"
-		},
-		".": {
-			"import": "./exports/index.js",
-			"types": "./exports/index.d.ts"
-		},
-		"./property": {
-			"import": "./exports/property.js",
-			"types": "./exports/decorators/property.d.ts"
-		},
-		"./query": {
-			"import": "./exports/query.js",
-			"types": "./exports/decorators/query.d.ts"
-		},
-		"./state": {
-			"import": "./exports/state.js",
-			"types": "./exports/decorators/state.d.ts"
-		}
-	},
-	"scripts": {
-		"build": "rollup -c",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"dependencies": {
-		"lit": "^3.1.2",
-		"lit-html": "^3.1.2"
-	},
-	"devDependencies": {
-		"@rollup/plugin-node-resolve": "^15.2.3",
-		"@rollup/plugin-typescript": "^11.1.6",
-		"rollup": "^4.9.6",
-		"rollup-plugin-auto-exports": "^1.0.4",
-		"tslib": "^2.6.2"
-	}
+  "name": "@vandeurenglenn/lite",
+  "version": "0.1.0",
+  "description": "",
+  "type": "module",
+  "files": [
+    "exports"
+  ],
+  "exports": {
+    "./element": {
+      "import": "./exports/element.js",
+      "types": "./exports/element.d.ts"
+    },
+    ".": {
+      "import": "./exports/index.js",
+      "types": "./exports/index.d.ts"
+    },
+    "./property": {
+      "import": "./exports/property.js",
+      "types": "./exports/decorators/property.d.ts"
+    },
+    "./query": {
+      "import": "./exports/query.js",
+      "types": "./exports/decorators/query.d.ts"
+    },
+    "./state": {
+      "import": "./exports/state.js",
+      "types": "./exports/decorators/state.d.ts"
+    }
+  },
+  "scripts": {
+    "build": "rollup -c",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
+    "lit": "^3.1.2",
+    "lit-html": "^3.1.2"
+  },
+  "devDependencies": {
+    "@rollup/plugin-typescript": "^11.1.6",
+    "rollup": "^4.9.6",
+    "rollup-plugin-auto-exports": "^1.0.4",
+    "tslib": "^2.6.2"
+  }
 }
