--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"lit-html": "^3.1.2"
 	},
 	"devDependencies": {
+		"@rollup/plugin-terser": "^0.4.4",
 		"@rollup/plugin-typescript": "^11.1.6",
 		"rollup": "^4.9.6",
 		"rollup-plugin-auto-exports": "^1.0.4",
