--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
 		"exports"
 	],
 	"exports": {
+		"./custom-element": {
+			"import": "./exports/custom-element.js",
+			"types": "./exports/decorators/custom-element.d.ts"
+		},
 		"./element": {
 			"import": "./exports/element.js",
 			"types": "./exports/element.d.ts"
