--- a/package.json
+++ b/package.json
@@ -66,8 +66,7 @@
 	"dependencies": {
 		"@vandeurenglenn/little-pubsub": "^1.4.7",
 		"lit": "^3.1.2",
-		"lit-html": "^3.1.2",
-		"signal-polyfill": "^0.1.0"
+		"lit-html": "^3.1.2"
 	},
 	"devDependencies": {
 		"@rollup/plugin-terser": "^0.4.4",
