move firstRender to decorator & up deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
     "moduleResolution": "NodeNext",
     "declaration": true,
     "experimentalDecorators": true,
-    "useDefineForClassFields": false,
-    "types": ["node"]
+    "useDefineForClassFields": false
   },
   "include": ["./src/**/*"]
 }
